--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
   "name": "redcross",
   "version": "0.0.1",
-  "description": "A nodejs module for getting redcross shelters",
+  "description": "An API for RedCross shelters. This module downloads shelters and stores them in a mongo database.",
   "main": "app.js",
   "dependencies": {
     "async": "1.5.x",
-    "body-parser": "1.6.x",
+    "body-parser": "1.14.x",
     "cron-parser": "^1.0.1",
     "express": "4.8.x",
     "mongodb": "2.0.x",
-    "morgan": "1.2.x",
+    "morgan": "1.6.x",
     "node-schedule": "^0.3.0",
-    "request": "2.39.x"
+    "request": "2.65.x"
   },
   "devDependencies": {
-    "api-easy": "0.2.x",
     "assert": "^1.3.0",
-    "coffee-script": "1.8.x",
+    "coffee-script": "1.10.x",
     "cson": "1.6.x",
-    "forever": "0.11.x",
-    "it-each": "^0.3.1",
+    "forever": "0.15.x",
     "mocha": "^2.3.3"
   },
   "scripts": {
@@ -33,7 +31,9 @@
   "keywords": [
     "redcross",
     "red cross",
-    "stations"
+    "shelters",
+    "API",
+    "mongo"
   ],
   "author": {
     "name": "Andrew Van Tassel",
