--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redcross",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "An API for RedCross shelters. This module downloads shelters and stores them in a mongo database.",
   "main": "app.js",
   "dependencies": {
@@ -8,7 +8,7 @@
     "body-parser": "1.14.x",
     "cron-parser": "^1.0.1",
     "express": "4.8.x",
-    "mongodb": "2.0.x",
+    "mongodb": "^2.0.47",
     "morgan": "1.6.x",
     "node-schedule": "^0.3.0",
     "request": "2.65.x"
