--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mocha": "^2.3.3"
   },
   "scripts": {
+    "start": "forever node app.js",
     "prepublish": "cake build",
     "test": "mocha --timeout 20000 --reporter spec test/*.js"
   },
