--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "1.5.x",
     "body-parser": "1.14.x",
+    "cake": "^0.1.1",
     "cron-parser": "^1.0.1",
     "express": "4.8.x",
     "mongodb": "^2.0.47",
@@ -15,7 +16,7 @@
   },
   "devDependencies": {
     "assert": "^1.3.0",
-    "coffee-script": "1.10.x",
+    "coffee-script": "1.8.x",
     "cson": "1.6.x",
     "forever": "0.15.x",
     "mocha": "^2.3.3"
