Added mongo close connection Bump 0.0.6

--- a/lib/config.json
+++ b/lib/config.json
@@ -1,9 +1,8 @@
-{
-  "mongo": {
-    "host": "localhost",
-    "port": 27017,
-    "dbName": "redcross",
-    "uri": null
-  },
-  "cronUpdateSchedule": "* 9 * * *"
+{ "mongo":
+  { "host": "localhost"
+  , "port": 27017
+  , "dbName": "redcross"
+  , "uri": null
+  }
+, "cronUpdateSchedule": "* 9 * * *"
 }
